HW2 & File Setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-/istanbulEylul23/eylul2023.csv
+/AleynaHasagdas_SenaOz_HW1/eylul2023.csv
+istanbulEylul23.zip
+AleynaHasagdas_SenaOz_HW1/eylul2023.csv
