add term project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 istanbulEylul23.zip
 GeospatialDataVisualization/eylul2023.csv
 /GeospatialDataVisualization/eylul2023.csv
+49Y/TermProject/SeoulBikeData.csv
